# solvent

./: .eslintignore  .gitignore  LICENSE  README.md  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  vite.config.js  web-dev-server.config.js  web-dev-server.config.mjs
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
.storybook/: main.js  preview.js  server.mjs
public-www/solidos/: sw.js
public-www/solidos/mashlib/: mash.css  mashlib.min.js
src/: app-shell.js  app-shell.stories.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  main.rs  provision_template.json  state.rs
src-tauri/src/podverse_manager/: config.rs  lproxy.rs  mod.rs  podverse.rs  repo.rs  storage.rs
src-www/: index.html  mod.js
src-www/assets/: mashlib.min.js
src-www/components/base/: base-component.js  base.styles.css
src-www/components/home/: .stories.js  component.js  icons.js  mod.js  styles.css
src-www/components/podverse/delete-pod-wizard/: .stories.js  component.js  mod.js  styles.css
src-www/components/podverse/pod/: pod.component.js  pod.stories.js  pod.styles.css
src-www/components/podverse/pod-info/: .stories.js  component.js  icons.js  mod.js  pod-info.component.js  pod-info.stories.js  pod-info.styles.css  sn-pod-info.js  sn-pod-info.stories.js  styles.css
src-www/components/podverse/podset-info/: .stories.js  component.js  mod.js  podset-info.component.js  sn-podset-info.js  sn-podset-info.stories.js  styles.css
src-www/components/podverse/podverse-manager/: .stories.js  component.js  mod.js  podverse-manager.component.js  sn-podverse-manager.js  sn-podverse-manager.stories.js
src-www/components/podverse/upsert-pod-wizard/: .stories.js  component.js  mod.js  styles.css
src-www/components/podverse/wizard-frame/: component.js  mod.js  styles.css
src-www/components/styles/: component.styles.js  headings.styles.js
src-www/podverse-manager/: config.js  mock-data.js  mock-ipc.js  mod.js
src-www/solidos/: index.html  mod.js
www/: app-shell.js  app-shell.stories.js  index.html  mod.js
www/assets/: mash.css
www/components/podverse/: Pod.js  Pod.stories.js
www/podverse_manager/: config.js  mod.js
www/solidos/: mod.js  setup_sw.js  sw.js
